# neo_erratic

erratic_description/: CMakeLists.txt  package.xml
erratic_description/launch/: erratic_laser_mobile_base.launch  erratic_laser_wg_world.launch
erratic_description/urdf/: erratic.urdf.xacro  erratic_base.xacro  erratic_computer.xacro  erratic_hokuyo_laser.xacro  erratic_laser.urdf.xacro  erratic_wheel.xacro
erratic_navigation/: CMakeLists.txt  package.xml
erratic_navigation/navigation_config/: costmap_common_params.yaml
erratic_navigation/navigation_slam/: slam_gmapping.launch
erratic_navigation_apps/: CMakeLists.txt  package.xml
erratic_player/: CMakeLists.txt  package.xml
erratic_player/src/: erratic_player.cpp
erratic_robot/: CMakeLists.txt  package.xml
erratic_teleop/: CMakeLists.txt  package.xml
player/: CMakeLists.txt  package.xml
player/player/include/player-2.2/: playerconfig.h
player/player/include/player-2.2/libplayerc/: playerc.h
player/player/include/player-2.2/libplayercore/: error.h  message.h  player.h
player/player/include/player-2.2/libplayertcp/: playertcp.h
player/player/include/player-2.2/libplayerxdr/: functiontable.h  playerxdr.h
player/player/lib/: libplayerc.so.2.2.0  libplayercore.so.2.2  libplayertcp.so.2.2  libplayerudp.so.2.2  libplayerxdr.so.2.2  liburglaser_standalone.so.2.2.0  libwavefront_standalone.so.2.2
player/player/lib/pkgconfig/: playerc.pc  playercore.pc  playerdrivers.pc  playererror.pc  playertcp.pc  playerudp.pc  playerutils.pc  playerxdr.pc
player/player/share/cmake/Modules/: UsePlayerPlugin.cmake
player/player/share/player/config/: erratic.cfg~
