<package>
    <name>erratic_player</name>
    <version>0.3.3</version>
    <description>
        A ROS node that wraps up the Player erratic driver, which provides access to the Erratic mobile robot.
    </description>

    <maintainer email="todo@todo.com">Antons Rebguns</maintainer>
    <license>BSD</license>
    <!-- <review status="unreviewed" notes=""/> -->
    <url>http://ros.org/wiki/erratic_player</url>
    <author>Antons Rebguns</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>player</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>player</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>


